traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:8: error: illegal start of simple expression
}
^TraversalDiagonal:22: error: illegal start of simple expression
  while (! isInPosition(x,y)) match {
                              ^